--- a/catalog.html
+++ b/catalog.html
@@ -40,10 +40,10 @@
               </li>
             </ul>
           </li>
-          <li>
+          <li class="site-navigation-sub">
             <a href="#">Доставка и оплата</a>
           </li>
-          <li>
+          <li class="site-navigation-sub">
             <a href="#">О Компании</a>
           </li>
         </ul>
@@ -196,8 +196,9 @@
             <div class="price-wrapper">
               <img src="img/item-1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
               <div class="catalog-list-item-price">
-                <span class="item-price">310</span>
+                <p class="item-price">310₽
                 <span class="item-weight">/кг</span>
+                </p>
               </div>
             </div>
             <h3 class="offers-title">
@@ -209,8 +210,9 @@
             <div class="price-wrapper">
               <img src="img/item-2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
               <div class="catalog-list-item-price">
-                <span class="item-price">380</span>
+                <p class="item-price">380₽
                 <span class="item-weight">/кг</span>
+                </p>
               </div>
             </div>
             <h3 class="offers-title">
@@ -222,8 +224,9 @@
             <div class="price-wrapper">
               <img src="img/item-3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
               <div class="catalog-list-item-price">
-                <span class="item-price">355</span>
+                <p class="item-price">355₽
                 <span class="item-weight">/кг</span>
+                </p>
               </div>
             </div>
             <h3 class="offers-title">
@@ -235,8 +238,9 @@
             <div class="price-wrapper">
               <img src="img/item-4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
               <div class="catalog-list-item-price">
-                <span class="item-price">415</span>
+                <p class="item-price">415₽
                 <span class="item-weight">/кг</span>
+                </p>
               </div>
             </div>
             <h3 class="offers-title">
@@ -248,8 +252,9 @@
             <div class="price-wrapper">
               <img src="img/item-5.jpg" width="267" height="267" alt="Сливочное с брусничным джемом">
               <div class="catalog-list-item-price">
-                <span class="item-price">325</span>
+                <p class="item-price">325₽
                 <span class="item-weight">/кг</span>
+                </p>
               </div>
             </div>
             <h3 class="offers-title">
@@ -261,8 +266,9 @@
             <div class="price-wrapper">
               <img src="img/item-6.jpg" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
               <div class="catalog-list-item-price">
-                <span class="item-price">410</span>
+                <p class="item-price">410₽
                 <span class="item-weight">/кг</span>
+                </p>
               </div>
             </div>
             <h3 class="offers-title">
@@ -274,8 +280,9 @@
             <div class="price-wrapper">
               <img src="img/item-7.jpg" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
               <div class="catalog-list-item-price">
-                <span class="item-price">375</span>
+                <p class="item-price">375₽
                 <span class="item-weight">/кг</span>
+                </p>
               </div>
             </div>
             <h3 class="offers-title">
@@ -287,8 +294,9 @@
             <div class="price-wrapper">
               <img src="img/item-8.jpg" width="267" height="267" alt="Сливочное с шоколадной стружкой">
               <div class="catalog-list-item-price">
-                <span class="item-price">320</span>
+                <p class="item-price">320₽
                 <span class="item-weight">/кг</span>
+                </p>
               </div>
             </div>
             <h3 class="offers-title">
@@ -300,8 +308,9 @@
             <div class="price-wrapper">
               <img src="img/item-9.jpg" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
               <div class="catalog-list-item-price">
-                <span class="item-price">440</span>
+                <p class="item-price">440₽
                 <span class="item-weight">/кг</span>
+                </p>
               </div>
             </div>
             <h3 class="offers-title">
@@ -313,8 +322,9 @@
             <div class="price-wrapper">
               <img src="img/item-10.jpg" width="267" height="267" alt="Сливочноe с ментоловым сиропом">
               <div class="catalog-list-item-price">
-                <span class="item-price">435</span>
+                <p class="item-price">435₽
                 <span class="item-weight">/кг</span>
+                </p>
               </div>
             </div>
             <h3 class="offers-title">
@@ -327,8 +337,9 @@
             <div class="price-wrapper">
               <img src="img/item-11.jpg" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
               <div class="catalog-list-item-price">
-                <span class="item-price">420</span>
+                <p class="item-price">420₽
                 <span class="item-weight">/кг</span>
+                </p>
               </div>
             </div>
             <h3 class="offers-title">
@@ -340,8 +351,9 @@
             <div class="price-wrapper">
               <img src="img/item-12.jpg" width="267" height="267" alt="Сливочное с мятным сиропом">
               <div class="catalog-list-item-price">
-                <span class="item-price">355</span>
+                <p class="item-price">355₽
                 <span class="item-weight">/кг</span>
+              </p>
               </div>
             </div>
             <h3 class="offers-title">
