--- a/index.html
+++ b/index.html
@@ -139,8 +139,9 @@
             <div class="price-wrapper">
               <img src="img/item-1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
               <div class="catalog-list-item-price">
-                <span class="item-price">310</span>
+                <p class="item-price">310₽
                 <span class="item-weight">/кг</span>
+                </p>
               </div>
             </div>
             <h3 class="offers-title">
@@ -152,8 +153,9 @@
             <div class="price-wrapper">
               <img src="img/item-2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
               <div class="catalog-list-item-price">
-                <span class="item-price">380</span>
+                <p class="item-price">380₽
                 <span class="item-weight">/кг</span>
+                </p>
               </div>
             </div>
             <h3 class="offers-title">
@@ -166,8 +168,9 @@
               <div class="price-wrapper">
                 <img src="img/item-3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
                 <div class="catalog-list-item-price">
-                  <span class="item-price">355</span>
+                  <p class="item-price">355₽
                   <span class="item-weight">/кг</span>
+                  </p>
                 </div>
               </div>
             </div>
@@ -180,8 +183,9 @@
             <div class="price-wrapper">
               <img src="img/item-4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
               <div class="catalog-list-item-price">
-                <span class="item-price">415</span>
+                <p class="item-price">415₽
                 <span class="item-weight">/кг</span>
+                </p>
               </div>
             </div>
             <h3 class="offers-title">
