--- a/catalog.html
+++ b/catalog.html
@@ -204,7 +204,9 @@
               <h3 class="offers-title">
                 <a href="catalog.html">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
               </h3>
-              <a class="offers-btn" href="#">Быстрый просмотр</a>
+              <div class="button-wrapper">
+                <a class="offers-btn" href="#">Быстрый просмотр</a>
+              </div>
             </li>
             <li class="offers-item">
               <div class="price-wrapper">
@@ -217,7 +219,9 @@
               <h3 class="offers-title">
                 <a href="catalog.html">Сливочно-кофейное с кусочками шоколада</a>
               </h3>
-              <a class="offers-btn" href="#">Быстрый просмотр</a>
+              <div class="button-wrapper">
+                <a class="offers-btn" href="#">Быстрый просмотр</a>
+              </div>
             </li>
             <li class="offers-item">
               <div class="price-wrapper">
@@ -230,7 +234,9 @@
               <h3 class="offers-title">
                 <a href="catalog.html">Сливочно-клубничное с присыпкой из белого шоколада</a>
               </h3>
-              <a class="offers-btn" href="#">Быстрый просмотр</a>
+              <div class="button-wrapper">
+                <a class="offers-btn" href="#">Быстрый просмотр</a>
+              </div>
             </li>
             <li class="offers-item">
               <div class="price-wrapper">
@@ -243,7 +249,9 @@
               <h3 class="offers-title">
                 <a href="catalog.html">Сливочное крем-брюле с карамельной подливкой</a>
               </h3>
-              <a class="offers-btn" href="#">Быстрый просмотр</a>
+              <div class="button-wrapper">
+                <a class="offers-btn" href="#">Быстрый просмотр</a>
+              </div>
             </li>
             <li class="offers-item">
               <div class="price-wrapper">
@@ -256,7 +264,9 @@
               <h3 class="offers-title">
                 <a href="catalog.html">Сливочное с брусничным джемом</a>
               </h3>
-              <a class="offers-btn" href="#">Быстрый просмотр</a>
+              <div class="button-wrapper">
+                <a class="offers-btn" href="#">Быстрый просмотр</a>
+              </div>
             </li>
             <li class="offers-item">
               <div class="price-wrapper">
@@ -269,7 +279,9 @@
               <h3 class="offers-title">
                 <a href="catalog.html">Сливочно-черничное с цельными ягодами черники</a>
               </h3>
-              <a class="offers-btn" href="#">Быстрый просмотр</a>
+              <div class="button-wrapper">
+                <a class="offers-btn" href="#">Быстрый просмотр</a>
+              </div>
             </li>
             <li class="offers-item">
               <div class="price-wrapper">
@@ -282,7 +294,9 @@
               <h3 class="offers-title">
                 <a href="catalog.html">Сливочно-лимонное с карамельной присыпкой</a>
               </h3>
-              <a class="offers-btn" href="#">Быстрый просмотр</a>
+              <div class="button-wrapper">
+                <a class="offers-btn" href="#">Быстрый просмотр</a>
+              </div>
             </li>
             <li class="offers-item">
               <div class="price-wrapper">
@@ -295,7 +309,9 @@
               <h3 class="offers-title">
                 <a href="catalog.html">Сливочное с шоколадной стружкой</a>
               </h3>
-              <a class="offers-btn" href="#">Быстрый просмотр</a>
+              <div class="button-wrapper">
+                <a class="offers-btn" href="#">Быстрый просмотр</a>
+              </div>
             </li>
             <li class="offers-item">
               <div class="price-wrapper">
@@ -308,7 +324,9 @@
               <h3 class="offers-title">
                 <a href="catalog.html">Сливочно-ванильное с кусочками шоколада</a>
               </h3>
-              <a class="offers-btn" href="#">Быстрый просмотр</a>
+              <div class="button-wrapper">
+                <a class="offers-btn" href="#">Быстрый просмотр</a>
+              </div>
             </li>
             <li class="offers-item">
               <div class="price-wrapper">
@@ -321,7 +339,9 @@
               <h3 class="offers-title">
                 <a href="catalog.html">Сливочноe с ментоловым сиропом</a>
               </h3>
-              <a class="offers-btn" href="#">Быстрый просмотр</a>
+              <div class="button-wrapper">
+                <a class="offers-btn" href="#">Быстрый просмотр</a>
+              </div>
             </li>
             <li class="offers-item">
               <div class="price-wrapper">
@@ -334,7 +354,9 @@
               <h3 class="offers-title">
                 <a href="catalog.html">Сливочное с кусочками черного шоколада</a>
               </h3>
-              <a class="offers-btn" href="#">Быстрый просмотр</a>
+              <div class="button-wrapper">
+                <a class="offers-btn" href="#">Быстрый просмотр</a>
+              </div>
             </li>
             <li class="offers-item">
               <div class="price-wrapper">
@@ -347,7 +369,9 @@
               <h3 class="offers-title">
                 <a href="catalog.html">Сливочное с мятным сиропом</a>
               </h3>
-              <a class="offers-btn" href="#">Быстрый просмотр</a>
+              <div class="button-wrapper">
+                <a class="offers-btn" href="#">Быстрый просмотр</a>
+              </div>
             </li>
           </ul>
           <ul class="pagination">
