--- a/index.html
+++ b/index.html
@@ -136,11 +136,12 @@
         </section>
         <section class="popular-offers">
           <h2 class="visually-hidden">Хиты продаж</h2>
+          <!-- контейнер -->
           <ul class="hits-list">
             <li class="offers-item">
-              <div class="catalog-preview">
-                <div class="price-wrapper">
-                  <img src="img/item-1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+              <div class="offers-preview">
+                <div class="price-wrapper-hit">
+                  <img class="icecream" src="img/item-1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
                   <div class="catalog-list-item-price">
                     <p class="item-price">310₽<span class="item-weight">/кг</span>
                     </p>
@@ -149,11 +150,13 @@
                 <h3 class="offers-title">
                   <a href="catalog.html">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
                 </h3>
-                <a class="offers-btn" href="#">Быстрый просмотр</a>
+                <div class="button-wrapper">
+                  <a class="offers-btn" href="#">Быстрый просмотр</a>
+                </div>
               </div>
             </li>
             <li class="offers-item">
-              <div class="price-wrapper">
+              <div class="price-wrapper-hit">
                 <img src="img/item-2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
                 <div class="catalog-list-item-price">
                   <p class="item-price">380₽<span class="item-weight">/кг</span>
@@ -163,10 +166,12 @@
               <h3 class="offers-title">
                 <a href="catalog.html">Сливочно-кофейное с кусочками шоколада</a>
               </h3>
-              <a class="offers-btn" href="#">Быстрый просмотр</a>
+              <div class="button-wrapper">
+                <a class="offers-btn" href="#">Быстрый просмотр</a>
+              </div>
             </li>
             <li class="offers-item">
-              <div class="price-wrapper">
+              <div class="price-wrapper-hit">
                 <div class="price-wrapper">
                   <img src="img/item-3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
                   <div class="catalog-list-item-price">
@@ -178,10 +183,12 @@
               <h3 class="offers-title">
                 <a href="catalog.html">Сливочно-клубничное с присыпкой из белого шоколада</a>
               </h3>
-              <a class="offers-btn" href="#">Быстрый просмотр</a>
+              <div class="button-wrapper">
+                <a class="offers-btn" href="#">Быстрый просмотр</a>
+              </div>
             </li>
             <li class="offers-item">
-              <div class="price-wrapper">
+              <div class="price-wrapper-hit">
                 <img src="img/item-4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
                 <div class="catalog-list-item-price">
                   <p class="item-price">415₽<span class="item-weight">/кг</span>
@@ -191,7 +198,9 @@
               <h3 class="offers-title">
                 <a href="catalog.html">Сливочное крем-брюле с карамельной подливкой</a>
               </h3>
-              <a class="offers-btn" href="#">Быстрый просмотр</a>
+              <div class="button-wrapper">
+                <a class="offers-btn" href="#">Быстрый просмотр</a>
+              </div>
             </li>
           </ul>
         </section>
