--- a/catalog.html
+++ b/catalog.html
@@ -53,7 +53,8 @@
           <ul class="user-navigation">
             <li class="user-navigation-item">
               <a class="header-btn-search" href="#">
-                <span class="visually-hidden">Поиск</span>
+                <span class="visually-hidden">Поиск</span><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17" height="17" viewBox="0 0 17 17"><path fill="#fff" d="M16.958 15.527L11.75 10.32A6.455 6.455 0 0 0 13 6.5 6.5 6.5 0 1 0 6.5 13a6.465 6.465 0 0 0 3.839-1.263l5.205 5.204 1.414-1.414zM6.5 11C4.019 11 2 8.981 2 6.5S4.019 2 6.5 2 11 4.019 11 6.5 8.981 11 6.5 11z"/></svg>
+
               </a>
               <form class="user-navigation modal-search" action="https://echo.htmlacademy.ru" method="post">
                 <label class="visually-hidden" for="input-search">Поиск по сайту</label>
@@ -62,7 +63,8 @@
               </form>
             </li>
             <li class="user-navigation-item">
-              <a class="login-link" href="#">Вход</a>
+              <a class="login-link" href="#"><span class="enter-wrap">Вход</span><svg xmlns="http://www.w3.org/2000/svg" width="30" height="20" viewBox="0 0 20 20"><g fill="#ffffff"><path d="M6 14.875L12.917 9.5 6 4.125v2.917H-.042v4.917H6z"/><path d="M18 0H5C3.9 0 3 .9 3 2v2h2V2h13v15H5v-2H3v2c0 1.1.9 2 2 2h13c1.1 0 2-.9 2-2V2c0-1.1-.9-2-2-2z"/></g></svg>
+              </a>
               <form class="user-navigation-login" action="https://echo.htmlacademy.ru" method="post">
                 <fieldset>
                   <label class="visually-hidden" for="entry-email">Электронная почта</label>
@@ -145,20 +147,24 @@
           <form class="filter" method="get" action="https://echo.htmlacademy.ru">
             <fieldset class="sort">
               <legend>Сортировка:</legend>
-              <select name="sorting">
+              <div class="select-container">
+              <select class="category-filters" name="sorting">
                 <option value="1" selected>по популярности</option>
                 <option value="2">сначала недорогие</option>
                 <option value="3">сначала дорогие</option>
                 <option value="4">по жирности</option>
               </select>
+            </div>
             </fieldset>
             <fieldset class="price">
               <legend class="price-value">Цена: 100 – 500 руб.</legend>
-              <input type="visually-hidden" name="min-price" value="100">
-              <input type="visually-hidden" name="max-price" value="500">
+              <div class="price-controls">
+              <label class="min-price"><input class="visually-hidden" type="text" name="min-price" value="100"></label>
+              <label class="max-price"><input class="visually-hidden" type="text" name="max-price" value="500"></label>
+            </div>
               <div class="filter-toggle">
-                <div class="button-left"></div>
-                <div class="button-right"></div>
+                <div class="range-toggle range-toggle-min"></div>
+                <div class="range-toggle range-toggle-max"></div>
                 <div class="range-scale"></div>
                 <div class="selected-range"></div>
               </div>
@@ -405,7 +411,7 @@
           <ul class="social-list">
             <li class="social-item">
               <a class="social-button" href="#"><span class="visually-hidden">Твиттер</span><svg xmlns="http://www.w3.org/2000/svg"
-                  width="32" height="32" viewBox="0 0 32 32">
+                  width="32" height="32" viewbox="0 0 32 32">
                   <path fill="#FFF" d="M16 0C7.164 0 0 7.164 0 16c0 8.837 7.164 16 16 16 8.837 0 16-7.163 16-16 0-8.836-7.163-16-16-16zm7.944
                   12.809c-.251 6.516-3.463 10.832-10.992 10.702h-.486c-.447 0-4.543-.443-5.344-1.823 2.479.19 4.247-.406
                   5.12-1.136-1.048-.289-2.923-.461-3.251-2.848.384.104.618.221 1.299.113-1.307-.824-2.758-1.519-2.679-3.643.311.317
