--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
     <section class="map">
       <h2 class="visually-hidden">Как нас найти</h2>
       <p>
-        <img src="img/map.jpg" width="1200" height="430" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
+        <img src="img/map-pin.png" width="1200" height="430" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
       </p>
       <section class="address">
         <h3 class="visually-hidden">Адрес офиса</h3>
