modal and filters

--- a/catalog.html
+++ b/catalog.html
@@ -145,6 +145,7 @@
           <h1>Сливочное мороженое</h1>
           <h2 class="visually-hidden">Фильтры мороженого</h2>
           <form class="filter" method="get" action="https://echo.htmlacademy.ru">
+            <div class="top-column">
             <fieldset class="sort">
               <legend>Сортировка:</legend>
               <div class="select-container">
@@ -182,7 +183,8 @@
               <label class= "filter-fat" for="more-thirty">свыше 30%</label>
               </div>
             </fieldset>
-            <!-- <div class="filters-container-low"> -->
+          </div>
+                <div class="low-column">
             <fieldset class="topping-filter">
               <legend>Наполнители:</legend>
               <div class="topping-wrapper">
@@ -199,7 +201,7 @@
               </div>
             </fieldset>
             <button class="filter-btn">Применить</button>
-            <!-- </div> -->
+            </div>
           </form>
         </section>
         <section class="offers">
