--- a/catalog.html
+++ b/catalog.html
@@ -175,7 +175,7 @@
           <li>
             <a class="navigation-link" href="catalog.html">Каталог</a>
           </li>
-          <li class="breadcrumbs-current-page">Сливочное мороженое</li>
+          <li class="breadcrumbs-current-page">Сливочное</li>
         </ul>
         <section class="filters">
           <h1>Сливочное мороженое</h1>
@@ -210,9 +210,9 @@
                   <div class="selected-range"></div>
                 </div>
               </fieldset>
-              <fieldset class="fat">
+              <fieldset class="fat-filter">
                 <legend class="fat">Жирность</legend>
-                <div class="fat-wrapper">
+                <div class="fat-filter-wrapper">
                   <input class="fat-select visually-hidden" type="radio" name="fat-value" value="0" id="zero">
                   <label class="filter-fat" for="zero">"0%"</label>
                   <input class="fat-select visually-hidden" type="radio" name="fat-value" value="10" id="ten" checked>
@@ -244,7 +244,7 @@
             </div>
           </form>
         </section>
-        <section class="offers">
+        <section class="offers-cat">
           <h2 class="visually-hidden">Каталог мороженого</h2>
           <ul class="offers-list">
             <li class="offers-item">
