--- a/catalog.html
+++ b/catalog.html
@@ -159,12 +159,10 @@
               </div>
             </li>
           </ul>
-          <div class="contacts-wrapper">
             <div class="page-header-info">
               <p class="opening-hours">С 10 до 20, ежедневно</p>
               <a class="phone-number" href="tel:+78124502525">8 812 450-25-25</a>
             </div>
-          </div>
         </div>
       </header>
       <main class="container">
@@ -183,7 +181,7 @@
           <form class="filter" method="get" action="https://echo.htmlacademy.ru">
             <div class="top-column">
               <fieldset class="sort">
-                <legend>Сортировка:</legend>
+                <legend class="sort-filter">Сортировка:</legend>
                 <div class="select-container">
                   <select class="category-filters" name="sorting">
                     <option value="1" selected>по популярности</option>
@@ -226,7 +224,7 @@
             </div>
             <div class="low-column">
               <fieldset class="topping-filter">
-                <legend>Наполнители:</legend>
+                <legend class="topping">Наполнители:</legend>
                 <div class="topping-wrapper">
                   <input type="checkbox" class="toggle visually-hidden" name="topping" id="chocolate" value="choco" checked>
                   <label class="filter-lbl" for="chocolate">шоколадные</label>
@@ -544,7 +542,7 @@
         </div>
         <div class="footer-copyright">
           <a href="https://htmlacademy.ru/intensive/htmlcss">
-            <img src="img/logo-htmlacademy.svg" width="108" height="39" alt="Логотип HTML Academy">
+            <img class="img-logo" src="img/logo-htmlacademy.svg" width="108" height="39" alt="Логотип HTML Academy">
           </a>
           <p class="copyright">Сделано в
             <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> © 2017</p>
