--- a/catalog.html
+++ b/catalog.html
@@ -54,8 +54,7 @@
             <li class="user-navigation-item">
               <a class="header-btn-search" href="#">
                 <span class="visually-hidden">Поиск</span>
-                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17"
-                  height="17" viewBox="0 0 17 17">
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17" height="17" viewBox="0 0 17 17">
                   <path fill="#fff" d="M16.958 15.527L11.75 10.32A6.455 6.455 0 0 0 13 6.5 6.5 6.5 0 1 0 6.5 13a6.465 6.465 0 0 0 3.839-1.263l5.205 5.204 1.414-1.414zM6.5 11C4.019 11 2 8.981 2 6.5S4.019 2 6.5 2 11 4.019 11 6.5 8.981 11 6.5 11z"
                   />
                 </svg>
@@ -71,8 +70,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="20" viewBox="0 0 20 20">
                   <g fill="#ffffff">
                     <path d="M6 14.875L12.917 9.5 6 4.125v2.917H-.042v4.917H6z" />
-                    <path d="M18 0H5C3.9 0 3 .9 3 2v2h2V2h13v15H5v-2H3v2c0 1.1.9 2 2 2h13c1.1 0 2-.9 2-2V2c0-1.1-.9-2-2-2z"
-                    />
+                    <path d="M18 0H5C3.9 0 3 .9 3 2v2h2V2h13v15H5v-2H3v2c0 1.1.9 2 2 2h13c1.1 0 2-.9 2-2V2c0-1.1-.9-2-2-2z" />
                   </g>
                 </svg>
               </a>
@@ -159,10 +157,10 @@
               </div>
             </li>
           </ul>
-            <div class="page-header-info">
-              <p class="opening-hours">С 10 до 20, ежедневно</p>
-              <a class="phone-number" href="tel:+78124502525">8 812 450-25-25</a>
-            </div>
+          <div class="page-header-info">
+            <p class="opening-hours">С 10 до 20, ежедневно</p>
+            <a class="phone-number" href="tel:+78124502525">8 812 450-25-25</a>
+          </div>
         </div>
       </header>
       <main class="container">
