--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
             <li class="user-navigation-item">
               <a class="header-btn-search" href="#">
                 <span class="visually-hidden">Поиск</span>
-                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17"
-                  height="17" viewBox="0 0 17 17">
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17" height="17" viewBox="0 0 17 17">
                   <path fill="#fff" d="M16.958 15.527L11.75 10.32A6.455 6.455 0 0 0 13 6.5 6.5 6.5 0 1 0 6.5 13a6.465 6.465 0 0 0 3.839-1.263l5.205 5.204 1.414-1.414zM6.5 11C4.019 11 2 8.981 2 6.5S4.019 2 6.5 2 11 4.019 11 6.5 8.981 11 6.5 11z"
                   />
                 </svg>
@@ -72,8 +71,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="20" viewBox="0 0 20 20">
                   <g fill="#ffffff">
                     <path d="M6 14.875L12.917 9.5 6 4.125v2.917H-.042v4.917H6z" />
-                    <path d="M18 0H5C3.9 0 3 .9 3 2v2h2V2h13v15H5v-2H3v2c0 1.1.9 2 2 2h13c1.1 0 2-.9 2-2V2c0-1.1-.9-2-2-2z"
-                    />
+                    <path d="M18 0H5C3.9 0 3 .9 3 2v2h2V2h13v15H5v-2H3v2c0 1.1.9 2 2 2h13c1.1 0 2-.9 2-2V2c0-1.1-.9-2-2-2z" />
                   </g>
                 </svg>
               </a>
@@ -99,13 +97,10 @@
               <a class="header-btn-basket" href="#">
                 <span class="visually-hidden">Корзина</span>
                 <span class="btn-basket-text"> Пусто </span>
-                <svg xmlns="http://www.w3.org/2000/svg" width="21" height="20" viewBox="0 0 21 20">
-                  <g fill="#FFF">
-                    <path d="M5.657 2.031L5.422 0H0v2h3.64l1.5 13h13.988l1.699-12.969H5.657zM17.372 13H6.922L5.888 4.031h12.66L17.372 13z"
-                    />
-                    <circle cx="6.984" cy="18" r="2" />
-                    <circle cx="15.984" cy="18" r="2" />
-                  </g>
+                <svg class="basket" xmlns="http://www.w3.org/2000/svg" width="21" height="20" viewBox="0 0 21 20">
+                  <path d="M5.657 2.031L5.422 0H0v2h3.64l1.5 13h13.988l1.699-12.969H5.657zM17.372 13H6.922L5.888 4.031h12.66L17.372 13z" />
+                  <circle cx="6.984" cy="18" r="2" />
+                  <circle cx="15.984" cy="18" r="2" />
                 </svg>
               </a>
             </li>
@@ -233,22 +228,22 @@
           <h2 class="visually-hidden">Преимущества</h2>
           <h3 class="features-title">Магазин Глэйси- это онлайн- и офлайн-магазин по продаже мороженного собственного производства на развес</h3>
           <div class="features-container">
-          <div class="features-wrapper-left">
-            <ul class="features-list-left">
-              <li class="features-icecream">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования
-                и проверенных временем технологий.</li>
-              <li class="features-eco">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные
-                ингредиенты и добавки произведены из натурального, экологически чистого сырья.</li>
-            </ul>
-          </div>
-          <div class="features-wrapper-right">
-            <ul class="features-list-right">
-              <li class="features-partners">Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает
-                долговременное сотрудничество.</li>
-              <li class="features-thermo">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому
-                растаять в пути и позволяет сохранить превосходный вкус.</li>
-            </ul>
-          </div>
+            <div class="features-wrapper-left">
+              <ul class="features-list-left">
+                <li class="features-icecream">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования
+                  и проверенных временем технологий.</li>
+                <li class="features-eco">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные
+                  ингредиенты и добавки произведены из натурального, экологически чистого сырья.</li>
+              </ul>
+            </div>
+            <div class="features-wrapper-right">
+              <ul class="features-list-right">
+                <li class="features-partners">Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает
+                  долговременное сотрудничество.</li>
+                <li class="features-thermo">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому
+                  растаять в пути и позволяет сохранить превосходный вкус.</li>
+              </ul>
+            </div>
           </div>
         </section>
         <div class="blog-news-wrapper">
