modal window +js

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
               <b class="address-details">8 812 450-24-25</b>
               <br> (с 10 до 20 ежедневно)
             </p>
-            <a class="button-feedback" href="index.html">Форма обратной связи</a>
+            <a class="button-feedback" href="login.html">Форма обратной связи</a>
           </section>
         </section>
       </main>
@@ -378,7 +378,7 @@
     </footer>
     <section class="modal-login-container">
       <form class="modal-feedback" action="https://echo.htmlacademy.ru" method="post">
-        <h2 class="foorm-title">Мы обязательно вам ответим!</h2>
+        <h2 class="form-title">Мы обязательно вам ответим!</h2>
         <button class="modal-feedback-close" type="button">Закрыть</button><br>
         <label class="visually-hidden" for="feedback-name">Имя</label>
         <input class="feedback-input" type="text" id="feedback-name" placeholder="Как вас зовут?" tabindex="0" required>
@@ -392,6 +392,7 @@
       </form>
     </section>
   </div>
+  <script src="js/scripts.js"></script>
 </body>
 
 </html>
