validation form & bounce

--- a/catalog.html
+++ b/catalog.html
@@ -519,24 +519,24 @@
           </ul>
         </div>
         <div class="useful-documents">
-          <ul class="footer-information-list">
-            <div class="left-column">
-              <li class="doc-item">
-                <a class="footer-link-information for-suppliers" href="#">Для поставщиков</a>
-              </li>
-              <li class="doc-item">
-                <a class="footer-link-information" href="#">О производстве</a>
-              </li>
-            </div>
-            <div class="right-column">
-              <li class="doc-item">
-                <a class="footer-link-information" href="#">Наши документы</a>
-              </li>
-              <li class="doc-item">
-                <a class="footer-link-information" href="#">Экологические стандарты</a>
-              </li>
-            </div>
-          </ul>
+            <div class="footer-information-list">
+                <div class="left-column">
+                  <div class="doc-item">
+                    <a class="footer-link-information for-suppliers" href="#">Для поставщиков</a>
+                  </div>
+                  <div class="doc-item">
+                    <a class="footer-link-information" href="#">О производстве</a>
+                  </div>
+                </div>
+                <div class="right-column">
+                  <div class="doc-item">
+                    <a class="footer-link-information" href="#">Наши документы</a>
+                  </div>
+                  <div class="doc-item">
+                    <a class="footer-link-information" href="#">Экологические стандарты</a>
+                  </div>
+                </div>
+              </div>
         </div>
         <div class="footer-copyright">
           <a href="https://htmlacademy.ru/intensive/htmlcss">
